--- a/HTML/Rules.html
+++ b/HTML/Rules.html
@@ -3,7 +3,7 @@
 <head>
     <!--=== Default Tags ===-->
     <meta charset="UTF-8">
-    <title>Minecket - Rules</title>
+    <title>FROST - Rules</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/Images/logo.webp" type="image/x-icon">
@@ -95,46 +95,6 @@
             <p>Minecket Inc. aims to provide the best possible experience for players, maintaining a safe, fun, and friendly environment.</p>            
         </div>
 
-        <div class="rules-content">
-            <h2>Conduct</h2>
-            <span>Rules of conduct in global chats.</span>
-            
-            <ul>
-                <li>Be respectful to other players and staff members.</li>
-                <li>Do not use offensive, discriminatory, or defamatory language.</li>
-                <li>Do not spam in the chat.</li>
-                <li>Do not post personal information about yourself or other players.</li>
-            </ul>            
-        </div>
-
-        <div class="rules-content">
-            <h2>In Game</h2>
-            <span>Rules valid during matches.</span>
-
-            <ul>
-                <li>Do not cheat or use mods that give an unfair advantage.</li>
-                <li>Do not use glitches or exploits in the game.</li>
-                <li>Do not grief or destroy other players' constructions.</li>
-                <li>Do not steal items from other players.</li>
-                <li>Do not create offensive or inappropriate constructions.</li>
-            </ul>            
-        </div>
-
-        <div class="rules-content">
-            <h2>General</h2>
-            <span>List of general server rules.</span>
-
-            <ul>
-                <li>Do not use any form of hack or cheat.</li>
-                <li>Do not create multiple accounts or use other people's accounts.</li>
-                <li>Do not try to impersonate staff members.</li>
-                <li>Do not post inappropriate content in the chat or in other areas of the server.</li>
-            </ul>            
-        </div>
-
-        <div class="rules-end">
-            <p>Remember, the main objective of this server is to provide a fun and friendly environment for all players. Be kind and respectful to other players and staff members, and follow the rules to keep the environment safe and enjoyable for everyone. The staff is always available to help in case of doubts or problems. Enjoy the game!</p>            
-        </div>
     </main>
 
     <!--=== Play Section ===-->
