--- a/HTML/Cart.html
+++ b/HTML/Cart.html
@@ -166,6 +166,7 @@
                     </ul>
 
                     <a href="#" class="btn btn-alert" id="remove-item-4">Remove</a>
+                    <a href="https://wenpixel.tebex.io/checkout/packages/add/5293697/single" class="btn btn-dark">Checkout</a>
                 </div>
             </div>
         </div>
@@ -180,7 +181,7 @@
             </div>
         </div>
 
-        <a href="../HTML/Checkout.html" class="btn btn-dark">Checkout</a>          
+       
     </section>
 
     <!--=== Footer Section ===-->
