--- a/HTML/Cart.html
+++ b/HTML/Cart.html
@@ -3,7 +3,7 @@
 <head>
     <!--=== Default Tags ===-->
     <meta charset="UTF-8">
-    <title>Frost Network - Cart</title>
+    <title>MagicPixel - Cart</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../Images/logo.webp" type="image/x-icon">
@@ -17,25 +17,25 @@
     <link rel="stylesheet" href="../CSS/Classes/Framework.css">
 
     <!--=== Social Profile ===-->
-    <meta property="og:title" content="Frost Network - Cart">
+    <meta property="og:title" content="MagicPixel - Cart">
     <meta property="og:description" content="View your cart products.">
     <meta property="og:thumbnail" content="https://images.alphacoders.com/783/thumbbig-783153.webp">
 
     <!--=== SEO ===-->
     <meta name="description" content="View your cart products.">
-    <meta name="keywords" content="Frost Network, minecraft shop, minecraft server, cart Frost Network">
+    <meta name="keywords" content="MagicPixel, minecraft shop, minecraft server, cart MagicPixel">
     <meta name="author" content=""> <!--=== Github:  ===--> 
     <meta name="robots" content="index, follow"> <!--=== Robots indexing ===-->
     <meta name="googlebot" content="index, follow"> <!--=== Robots indexing ===-->
-    <link rel="canonical" href="https://Frost Network.vercel.app/HTML/Cart.html"> <!--=== Enter your URL here ===-->
+    <link rel="canonical" href="https://MagicPixel.vercel.app/HTML/Cart.html"> <!--=== Enter your URL here ===-->
 </head>
 
 <body>    
     <!--=== Navigation Bar ===-->
     <nav class="nav">
         <div class="nav-logo flex">
-            <img src="../Images/logo.webp" alt="Frost Network server logo" width="70px" height="70px">
-            <h1>Frost Network</h1> 
+            <img src="../Images/logo.webp" alt="MagicPixel server logo" width="70px" height="70px">
+            <h1>MagicPixel</h1> 
         </div>
 
         <div class="nav-list flex">
@@ -69,8 +69,8 @@
             </div>
 
             <div class="navbars-title flex">
-                <img src="../Images/logo.webp" alt="Frost Network server logo" width="30px" height="30px">
-                <h1>Frost Network</h1>
+                <img src="../Images/logo.webp" alt="MagicPixel server logo" width="30px" height="30px">
+                <h1>MagicPixel</h1>
             </div>
         </div>
 
@@ -197,8 +197,8 @@
             </div>
     
             <div class="footer-items">
-                <span class="sp-1">©2023 Frost Network | All Rights Reserved.</span>
-                <span class="sp-2">Minecraft is a trademark of Mojang and Frost Network is not affiliated with or endorsed by Mojang.</span>
+                <span class="sp-1">©2023 MagicPixel | All Rights Reserved.</span>
+                <span class="sp-2">Minecraft is a trademark of Mojang and MagicPixel is not affiliated with or endorsed by Mojang.</span>
                 <span class="sp-3">Made by .</span>
             </div>
     
