--- a/HTML/Login.html
+++ b/HTML/Login.html
@@ -3,7 +3,7 @@
 <head>
     <!--=== Default Tags ===-->
     <meta charset="UTF-8">
-    <title>Frost Network - Login</title>
+    <title>MagicPixel - Login</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../Images/logo.webp" type="image/x-icon">
@@ -17,25 +17,25 @@
     <link rel="stylesheet" href="../CSS/Classes/Framework.css">
 
     <!--=== Social Profile ===-->
-    <meta property="og:title" content="Frost Network - Login">
-    <meta property="og:description" content="Log in now to Frost Network's official site and continue shopping.">
+    <meta property="og:title" content="MagicPixel - Login">
+    <meta property="og:description" content="Log in now to MagicPixel's official site and continue shopping.">
     <meta property="og:thumbnail" content="https://images.alphacoders.com/783/thumbbig-783153.webp">
 
     <!--=== SEO ===-->
-    <meta name="description" content="Log in now to Frost Network's official site and continue shopping.">
-    <meta name="keywords" content="Frost Network, minecraft shop, minecraft server, login Frost Network">
-    <meta name="author" content="Frost Network"> <!--=== Github: Frost Network ===--> 
+    <meta name="description" content="Log in now to MagicPixel's official site and continue shopping.">
+    <meta name="keywords" content="MagicPixel, minecraft shop, minecraft server, login MagicPixel">
+    <meta name="author" content="MagicPixel"> <!--=== Github: MagicPixel ===--> 
     <meta name="robots" content="index, follow"> <!--=== Robots indexing ===-->
     <meta name="googlebot" content="index, follow"> <!--=== Robots indexing ===-->
-    <link rel="canonical" href="https://Frost Network.vercel.app/HTML/Login.html"> <!--=== Enter your URL here ===-->
+    <link rel="canonical" href="https://MagicPixel.vercel.app/HTML/Login.html"> <!--=== Enter your URL here ===-->
 </head>
 
 <body>
     <!--=== Navigation Bar ===-->
     <nav class="nav">
         <div class="nav-logo flex">
-            <img src="../Images/logo.webp" alt="Frost Network server logo" width="70px" height="70px">
-            <h1>Frost Network</h1> 
+            <img src="../Images/logo.webp" alt="MagicPixel server logo" width="70px" height="70px">
+            <h1>MagicPixel</h1> 
         </div>
 
         <div class="nav-list flex">
@@ -69,8 +69,8 @@
             </div>
 
             <div class="navbars-title flex">
-                <img src="../Images/logo.webp" alt="Frost Network server logo" width="30px" height="30px">
-                <h1>Frost Network</h1>
+                <img src="../Images/logo.webp" alt="MagicPixel server logo" width="30px" height="30px">
+                <h1>MagicPixel</h1>
             </div>
         </div>
 
@@ -106,17 +106,17 @@
         <div class="footer-container flex">
             <div class="footer-credits">
                 <div class="footer-credits-photo flex">
-                    <a class="flex" title="Frost Network" href="https://github.com/Frost Network">
-                        <img class="f-h" src="../Images/logo.webp" alt="Frost Network profile" width="50px" height="50px">
-                        <h2>Frost Network</h2>
+                    <a class="flex" title="MagicPixel" href="https://github.com/MagicPixel">
+                        <img class="f-h" src="../Images/logo.webp" alt="MagicPixel profile" width="50px" height="50px">
+                        <h2>MagicPixel</h2>
                     </a>
                 </div>
             </div>
     
             <div class="footer-items">
-                <span class="sp-1">©2023 Frost Network | All Rights Reserved.</span>
-                <span class="sp-2">Minecraft is a trademark of Mojang and Frost Network is not affiliated with or endorsed by Mojang.</span>
-                <span class="sp-3">Made by Frost Network.</span>
+                <span class="sp-1">©2023 MagicPixel | All Rights Reserved.</span>
+                <span class="sp-2">Minecraft is a trademark of Mojang and MagicPixel is not affiliated with or endorsed by Mojang.</span>
+                <span class="sp-3">Made by MagicPixel.</span>
             </div>
     
             <div class="footer-socials flex">
