--- a/HTML/Cart.html
+++ b/HTML/Cart.html
@@ -78,7 +78,7 @@
             <a href="../HTML/Index.html"><span>Home</span></a> 
             <a href="../HTML/Shop.html"><span>Shop</span></a>
             <a href="../HTML/Rules.html"><span>Announcement</span></a>
-            <a href="https://discord.com"><span>Discord</span></a> 
+            <a href="https://discord.gg/6hcdXYGNk3"><span>Discord</span></a> 
             <a href="../HTML/Login.html"><span>Login</span></a>
             <a href="../HTML/Cart.html"><span>View cart</span></a>
             <a href="https://minecraftpocket-servers.com/"><span>Vote</span></a>
