--- a/HTML/Rules.html
+++ b/HTML/Rules.html
@@ -41,7 +41,7 @@
             <a class="nav-item-1" href="../HTML/Index.html"><span>Home</span></a> 
             <a class="nav-item-2" href="../HTML/Shop.html"><span>Shop</span></a>
             <a class="nav-item-3" href="../HTML/Rules.html"><span>Announcement</span></a>
-            <a class="nav-item-4" href="https://Discord.com"><span>Discord</span></a> 
+            <a class="nav-item-4" href="https://discord.gg/6hcdXYGNk3"><span>Discord</span></a> 
             <a class="nav-item-5" href="https://minecraftpocket-servers.com/"><span>Vote</span></a>
         </div>
 
@@ -77,7 +77,7 @@
             <a href="../HTML/Index.html"><span>Home</span></a> 
             <a href="../HTML/Shop.html"><span>Shop</span></a>
             <a href="../HTML/Rules.html"><span>Announcement</span></a>
-            <a href="https://discord.com"><span>Discord</span></a> 
+            <a href="https://discord.gg/6hcdXYGNk3dc "><span>Discord</span></a> 
             <a href="../HTML/Login.html"><span>Login</span></a>
             <a href="../HTML/Cart.html"><span>View cart</span></a>
             <a href="https://minecraftpocket-servers.com/"><span>Vote</span></a>
@@ -135,7 +135,7 @@
             </div>
     
             <div class="footer-socials flex">
-                <a href="https://discord.com" title="discord"><img class="discord-social" src="../Images/discord.webp" alt="discord logo" width="40px" height="40px"></a>
+                <a href="https://discord.gg/6hcdXYGNk3" title="discord"><img class="discord-social" src="../Images/discord.webp" alt="discord logo" width="40px" height="40px"></a>
                 <a href="https://twitter.com" title="twitter"><img class="twitter-social" src="../Images/twitter.webp" alt="twitter logo" width="40px" height="40px"></a>
                 <a href="https://youtube.com" title="youtube"><img class="yt-social" src="../Images/youtube.webp" alt="youtube logo" width="40px" height="40px"></a>
             </div>
